--- a/contact.html
+++ b/contact.html
@@ -16,8 +16,8 @@
             </div>
             <ul>
                 <li><a href="index.html">Home</a></li>
-                <li><a href="about.html">About</a></li>
-                <li><a href="services.html">Services</a></li>
+                <li><a href="Landlords.html">Landlords</a></li>
+                <li><a href="Multi-Family.html">Multi-Family</a></li>
                 <li><a href="contact.html" class="active">Contact</a></li>
             </ul>
         </nav>
