--- a/index.html
+++ b/index.html
@@ -404,17 +404,16 @@
     <footer class="animate-fadein">
         <p>Company</p>
         <nav>
-            <a href="about.html">About Us</a>
             <a href="landlords.html">Landlord Solutions</a>
             <a href="services.html">Property Management</a>
             <a href="pilot.html">Pilot Program</a>
             <a href="contact.html">Contact Form</a>
         </nav>
-        <div class="social-icons">
+        <!-- <div class="social-icons">
             <a href="#" aria-label="Facebook">F</a>
             <a href="#" aria-label="Twitter">T</a>
             <a href="#" aria-label="LinkedIn">L</a>
-        </div>
+        </div> -->
     </footer>
     <script>
         // Simple slider logic
