--- a/Multi-Family.html
+++ b/Multi-Family.html
@@ -121,10 +121,10 @@
 <body>
     <header>
         <nav class="container">
-            <div class="logo">
+            <div class="logo animate-fadein">
                 <span>Magnus &amp; Co.®</span>
             </div>
-            <ul>
+            <ul class="animate-slidein-down">
                 <li><a href="index.html">Home</a></li>
                 <li><a href="landlords.html">Landlords</a></li>
                 <li><a href="Multi-Family.html" class="active">Multi-Family</a></li>
@@ -134,7 +134,7 @@
     </header>
 
     <div class="services-hero">
-        <div class="services-hero-content">
+        <div class="services-hero-content animate-zoom">
             <h1>Unlock NOI from Your Vacant Units</h1>
             <p>Premium STR integration that respects your asset, elevates your operations, and increases revenue—with no disruption.</p>
         </div>
@@ -142,17 +142,17 @@
 
     <main class="container">
         <section style="margin-top:2.5rem;">
-            <h2 style="text-align:center; font-size:2rem; margin-bottom:1.5rem;">Multifamily STR, Done Right</h2>
-            <p style="text-align:center; max-width:700px; margin:0 auto 2rem auto;">
+            <h2 style="text-align:center; font-size:2rem; margin-bottom:1.5rem;" class="animate-slidein-down">Multifamily STR, Done Right</h2>
+            <p style="text-align:center; max-width:700px; margin:0 auto 2rem auto;" class="animate-fadein-up">
                 Magnus &amp; Co. partners with multifamily owners and operators to turn idle units into fully managed short-term rentals.<br>
                 We don’t lease units—we integrate into your workflow with a system that protects your asset, supports your team, and drives NOI.
             </p>
         </section>
 
         <section>
-            <h2 style="text-align:center; font-size:1.5rem; margin-bottom:1.2rem;">Why Owners Work With Us</h2>
+            <h2 style="text-align:center; font-size:1.5rem; margin-bottom:1.2rem;" class="animate-pop">Why Owners Work With Us</h2>
             <div class="section-list">
-                <ul>
+                <ul class="animate-slidein-left">
                     <li>Increase NOI within 60 days using idle units</li>
                     <li>No displacement, no disruption to tenants</li>
                     <li>Professionally screened guests, insured stays</li>
@@ -161,7 +161,7 @@
                     <li>Live dashboards and full transparency</li>
                     <li>Works with Class A, B, and C assets</li>
                 </ul>
-                <ul>
+                <ul class="animate-slidein-right">
                     <h3 style="font-size:1.1rem; color:#0B0B0B; margin-bottom:0.7rem;">How We Fit Into Your Ops</h3>
                     <li>We coordinate with ownership, not just leasing</li>
                     <li>Clean integration with existing SOPs</li>
@@ -173,15 +173,15 @@
         </section>
 
         <section>
-            <h2 style="text-align:center; font-size:1.5rem; margin-bottom:1.2rem;">Proven Results in Multifamily STR Performance</h2>
-            <div class="results-list">
-                <ul>
+            <h2 style="text-align:center; font-size:1.5rem; margin-bottom:1.2rem;" class="animate-slidein-down">Proven Results in Multifamily STR Performance</h2>
+            <div class="results-list animate-fadein-up">
+                <ul  >
                     <li>20–35% NOI uplift per unit compared to long-term leases</li>
                     <li>80–90% average occupancy across stabilized STR units</li>
                     <li>100% guest compliance via automated rules and in-stay monitoring</li>
                     <li>Pre-staged units go live within 24–48 hours of vacancy, fully activated with guest protocols and pricing engine</li>
                     <li>0 onsite disruption reported across all managed properties</li>
-                    <li>&lt;2% incident rate across hundreds of stays—fully insured and resolved in-house</li>
+                    <li>2% incident rate across hundreds of stays—fully insured and resolved in-house</li>
                 </ul>
                 <p style="margin-top:1rem; color:#8DA9C4;">
                     All metrics are tracked, summarized, and reported directly to your asset or operations team during the pilot.
@@ -190,24 +190,24 @@
         </section>
 
         <section>
-            <h2 style="text-align:center; font-size:1.5rem; margin-bottom:1.2rem;">Our 60-Day Pilot Program</h2>
+            <h2 style="text-align:center; font-size:1.5rem; margin-bottom:1.2rem;" class="animate-fadein">Our 60-Day Pilot Program</h2>
             <div class="pilot-steps">
-                <div class="pilot-step">
+                <div class="pilot-step animate-slidein-left">
                     <h4>Step 1 – Strategic Unit Selection</h4>
                     <p>We align with ownership to select units that make operational and financial sense.</p>
                 </div>
-                <div class="pilot-step">
+                <div class="pilot-step animate-zoom">
                     <h4>Step 2 – Full-Service Launch</h4>
                     <p>We onboard within 15 days: listings, pricing, SOPs, guest support, cleaning, and tech.</p>
                 </div>
-                <div class="pilot-step">
+                <div class="pilot-step animate-slidein-right">
                     <h4>Step 3 – Review Results</h4>
                     <p>You receive clear, scheduled financial reports covering revenue, occupancy, fees, and net payouts—delivered in a format your asset management team can act on. If the pilot performs, we scale. If not, you walk away—no obligation.</p>
                 </div>
             </div>
         </section>
 
-        <div class="cta-section">
+        <div class="cta-section animate-slidein-down">
             <h2 style="font-size:1.3rem; margin-bottom:1rem;">Let's Talk Potential</h2>
             <a href="contact.html" class="btn">See What Your Underused Space Could Earn</a>
         </div>
@@ -216,13 +216,33 @@
     <footer>
         <p>Company</p>
         <nav>
-            <a href="about.html">About Us</a>
             <a href="landlords.html">Landlord Solutions</a>
             <a href="services.html">Multifamily</a>
             <a href="pilot.html">Pilot Program</a>
             <a href="contact.html">Contact Form</a>
         </nav>
-        <div class="social-icons">
+        <!-- <div class="social-icons">
             <a href="#" aria-label="Facebook">F</a>
             <a href="#" aria-label="Twitter">T</a>
-            <a href
+            <a href="#" aria-label="LinkedIn">L</a>
+        </div> -->
+    </footer>
+    <script>
+        // Animate on scroll
+        function animateOnScroll() {
+            const elements = document.querySelectorAll('.animate-fadein, .animate-fadein-up, .animate-slidein-left, .animate-slidein-right, .animate-pop, .animate-zoom, .animate-slidein-down');
+            elements.forEach(el => {
+                const rect = el.getBoundingClientRect();
+                if (rect.top < window.innerHeight - 60) {
+                    el.classList.add('animated');
+                }
+            });
+        }
+        window.addEventListener('scroll', animateOnScroll);
+        window.addEventListener('DOMContentLoaded', () => {
+            animateOnScroll();
+        });
+    </script>
+</body>
+
+</html>
