--- a/index.html
+++ b/index.html
@@ -311,26 +311,26 @@
     <main>
         <!-- Slider -->
         <div class="slider-container">
-            <div class="slider-slide active animate-zoom"
-                 style="background-image: url('https://images.unsplash.com/photo-1465101046530-73398c7f28ca?auto=format&fit=crop&w=1470&q=80');">
-                <div class="slider-content animate-fadein-up">
+            <div class="slider-slide active "
+                 style="background-image: url('https://images.unsplash.com/photo-1507089947368-19c1da9775ae?auto=format&fit=crop&w=1470&q=80');">
+                <div class="slider-content ">
                     <h1>Professional Stays &amp; Consistent Returns</h1>
                     <p>Partner with Magnus &amp; Co. for fully managed short-term rentals.</p>
                     <button class="btn animate-pop" onclick="document.location='contact.html'">Start Your 60-Day Pilot
                     </button>
                 </div>
             </div>
-            <div class="slider-slide animate-zoom"
-                 style="background-image: url('https://images.unsplash.com/photo-1503389152951-9c3d0c6b7a5a?auto=format&fit=crop&w=1470&q=80');">
-                <div class="slider-content animate-fadein-up">
+            <div class="slider-slide "
+                 style="background-image: url('https://images.unsplash.com/photo-1512918728675-ed5a9ecdebfd?auto=format&fit=crop&w=1470&q=80');">
+                <div class="slider-content ">
                     <h1>See Results in 60 Days</h1>
                     <p>No cost, no commitment. Let the numbers speak for themselves.</p>
-                    <button class="btn animate-pop" onclick="document.location='contact.html'">Book a Call</button>
+                    <button class="btn " onclick="document.location='contact.html'">Book a Call</button>
                 </div>
             </div>
             <div class="slider-controls">
-                <button class="slider-btn animate-pop" id="slider-prev">&#8592;</button>
-                <button class="slider-btn animate-pop" id="slider-next">&#8594;</button>
+                <button class="slider-btn " id="slider-prev">&#8592;</button>
+                <button class="slider-btn " id="slider-next">&#8594;</button>
             </div>
         </div>
         <!-- Solutions Section -->
